Add Admin Dashboard and code made more Optimised